--- a/portfolio-seewordapp.html
+++ b/portfolio-seewordapp.html
@@ -8,7 +8,7 @@
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
     <title>Shuai | See Word Reading</title>
-    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/css3.css">
     <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="js/myjs.js"></script>
@@ -100,7 +100,7 @@
 
 		    
 		    <div class="section part part_5" style="background-color: #71C0C9;">  
-		    	<div class="title_inside" style="font-size: 3rem;color: #fff;padding-bottom: 55px;position: relative; text-align:center;"> Making Information Structure</div>
+		    	<div class="title_inside" style="font-size: 3rem;color: #fff;padding-bottom: 55px;position: relative; text-align:center;"> Mapping out the flow</div>
 
 		        <div class="section_list">
 		        	<span class="section_list_line"></span>
@@ -136,37 +136,36 @@
 
 		    			<div class="row">
 		    				<div class="wireframe-step breath-top fadeIn animated" style="visibility: visible; animation-name: fadeIn;">
-		    					<span class="number">1</span>
+		    					<span class="number" style="right: 95px;top: 115px;">1</span>
 		    					<p class="on-left">
 		    						<span class="text">
 		    							<span class="title">Navigation</span>Using the App with a shortest time and a minimum number of operates.
 		    						</span>
 		    					</p>
-		    					<img class="on-right" src="img/nav1.png" style="right:-30px;position: absolute;top: -119px;">
-		    					<img class="on-right" src="img/nav2.png" style="right:-30px;position: absolute;top: 31px;">
+		    					<img class="on-right" src="img/nav1.png" style="right:-100px;position: absolute;bottom: 0px;">
 		    				</div>
 
-		    				<div class="wireframe-step breath-bottom fadeIn animated" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;top:-119px;left: 30px;">
-		    					<span class="number" style="top: 140px;right: 165px;">2</span>
-		    					<p class="on-left">
+		    				<div class="wireframe-step breath-bottom fadeIn animated" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;top:-110px;">
+		    					<span class="number" style="top:60px;left:75px;">2</span>
+		    					<p class="on-right-text" style="right: 60px;padding: 60px 0;">
 		    						<span class="text">
 		    							<span class="title">View Data</span>The application sends an invitation to each participant.</span>
 		    					</p>
-		    					<img class="on-right" src="img/data.png" style="position:absolute;right:-30px;padding:0;top:0px;">
+		    					<img class="on-right" src="img/data.png" style="position:absolute;left:-120px;padding:0;top:0px;">
 		    				</div>
 
 		    				<div class="wireframe-step breath-top fadeIn animated" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeIn;background-color:#519ba3;">
-		    					<span class="number">3</span>
-		    					<p class="on-left" style="padding-top: 70px;">
+		    					<span class="number" style="left:195px;top:105px;">3</span>
+		    					<p class="on-left" style="top: 0px;">
 		    						<span class="text">
 		    							<span class="title">View Inforgraphic</span>Meetings are automatically scheduled both in the app and in the user’s calendar.</span>
 		    					</p>
-		    					<img class="on-right" src="img/inforgraphic.png" style="position:absolute;right:-30px;padding:0;bottom:-50px;">
+		    					<img class="on-right" src="img/inforgraphic.png" style="position:absolute;right:0px;padding:0;bottom:-75px;">
 		    				</div>
 		    			</div>
 
 		    			<div class="row">
-		    				<div class="wireframe-step breath-bottom fadeIn animated" data-wow-delay=".6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeIn;top:-24px;background-color:#519ba3;">
+		    				<div class="wireframe-step breath-bottom fadeIn animated" data-wow-delay=".6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeIn;background-color:#519ba3;">
 		    					<span class="number" style="right: 75px;top: 180px;">4</span>
 		    					<p class="on-right-text" style="top:55px;">
 		    						<span class="text">
@@ -190,11 +189,12 @@
 
 			</div>	
 
-			 <div class="section part part_8">   
-		        <div class="design_title_left"><span><p>Refine</p></span></div>
-		        <div class="design_img"><img src="img/seeword6.png"></div>
-		    </div>    
-		        <div class="number_box nb">4</div>
+			<div class="section part part_8">   
+		        <div class="design_title_left"><span><p>DEFINE A COLOR LANGUAGE TO IMPROVE READABILITY</p></span></div>
+		        <div class="design_img" style="width: 60%;float: right;"><img src="img/Group.png"></div>
+		    </div>
+
+		    <div class="section part part_9"> 
 		        <div class="design_title">VISUAL INTERFACE</div>
 	            <div class="design_img"><img src="img/seeword1.jpg"></div>  
 	            <div class="design_img"><img src="img/seeword7.png"></div>
