--- a/portfolio-seewordapp.html
+++ b/portfolio-seewordapp.html
@@ -84,8 +84,8 @@
 	        </div>
 
             <div class="section part part_3">
-            	<div class="section_img" style="background:#71C0C9;">
-                		<div class="section_bg_img" style="background:url(img/seeword2.png) no-repeat; background-size:70%; background-position:35% 50%;"></div>
+            	<div class="section_img" style="background:#71C0C9; width:50%;">
+                		<div class="section_bg_img" style="background:url(img/seeword2.png) no-repeat; background-size:90%; background-position:35% 50%;"></div>
                 </div>
 
 	    		<div class="section_text">
@@ -127,60 +127,69 @@
 		    <div class="section part part_6" style="background-color: #f2f2f5;">
 		    	<div class="wireframes">
 		    		<div class="container" style="background-color:#f2f2f5; overflow:visible;">
-		    			<div class="row" style="padding-bottom: 165px;padding-top: 20px;">
+		    			<div class="row" style="padding-bottom: 75px;padding-top: 20px;">
 		    				<div class="row_text">
 		    					<h2>WIREFRAMES</h2>
-		    					<h3 style="color:#777;font-size:1rem; font-weight:300;">A couple out of a handful of iterations we went through.</h3>
+		    					<h3 style="color:#777;font-size:1rem; font-weight:300;">A couple out of a handful of iterations I went through.</h3>
 		    				</div>
 		    			</div>
 
 		    			<div class="row">
 		    				<div class="wireframe-step breath-top fadeIn animated" style="visibility: visible; animation-name: fadeIn;">
-		    					<span class="number" style="right: 95px;top: 115px;">1</span>
+		    					<div class="wireframe-step-box">
+		    					<span class="number" style="">1</span>
 		    					<p class="on-left">
 		    						<span class="text">
-		    							<span class="title">Navigation</span>Using the App with a shortest time and a minimum number of operates.
+		    							<span class="title">Navigation</span>Using the App with a shortest time and a minimum number of operates
 		    						</span>
 		    					</p>
-		    					<img class="on-right" src="img/nav1.png" style="right:-100px;position: absolute;bottom: 0px;">
+		    					<img class="on-right" src="img/nav1.png" style="">
+		    					</div>
 		    				</div>
 
-		    				<div class="wireframe-step breath-bottom fadeIn animated" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;top:-110px;">
-		    					<span class="number" style="top:60px;left:75px;">2</span>
-		    					<p class="on-right-text" style="right: 60px;padding: 60px 0;">
+		    				<div class="wireframe-step breath-bottom fadeIn animated" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;">
+		    					<div class="wireframe-step-box">
+		    					<span class="number" style="">2</span>
+		    					<p class="on-left">
 		    						<span class="text">
-		    							<span class="title">View Data</span>The application sends an invitation to each participant.</span>
+		    							<span class="title">Data</span>Using color to imporve the readability</span>
 		    					</p>
-		    					<img class="on-right" src="img/data.png" style="position:absolute;left:-120px;padding:0;top:0px;">
+		    					<img class="on-right" src="img/data.png" style="">
+		    					</div>
 		    				</div>
 
-		    				<div class="wireframe-step breath-top fadeIn animated" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeIn;background-color:#519ba3;">
-		    					<span class="number" style="left:195px;top:105px;">3</span>
-		    					<p class="on-left" style="top: 0px;">
+		    				<div class="wireframe-step breath-top fadeIn animated" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeIn;">
+		    					<div class="wireframe-step-box">
+		    					<span class="number" style="">3</span>
+		    					<p class="on-left">
 		    						<span class="text">
-		    							<span class="title">View Inforgraphic</span>Meetings are automatically scheduled both in the app and in the user’s calendar.</span>
+		    							<span class="title">Inforgraphic</span>The most obvious way to compare the information</span>
 		    					</p>
-		    					<img class="on-right" src="img/inforgraphic.png" style="position:absolute;right:0px;padding:0;bottom:-75px;">
+		    					<img class="on-right" src="img/inforgraphic.png" style="">
+		    					</div>
 		    				</div>
 		    			</div>
 
 		    			<div class="row">
-		    				<div class="wireframe-step breath-bottom fadeIn animated" data-wow-delay=".6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeIn;background-color:#519ba3;">
-		    					<span class="number" style="right: 75px;top: 180px;">4</span>
-		    					<p class="on-right-text" style="top:55px;">
+		    				<div class="wireframe-step breath-bottom fadeIn animated" data-wow-delay=".6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeIn;">
+		    					<div class="wireframe-step-box">
+		    					<span class="number" style="">4</span>
+		    					<p class="on-left">
 		    						<span class="text">
-		    							<span class="title">Set Up</span>The user can access the meeting details at all times.
-		    						</span>
+		    							<span class="title">Set Up</span>The most obvious way to help user using the set up function</span>
 		    					</p>
-		    					<img class="on-right" src="img/set up.png" style="padding: 0;bottom:-20px;left: 0;position:absolute;">
+		    					<img class="on-right" src="img/set up.png" style="">
+		    				    </div>
 		    				</div>
 
 		    				<div class="wireframe-step breath-top fadeIn animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.8s; animation-name: fadeIn;">
+		    					<div class="wireframe-step-box">
 		    					<span class="number">5</span>
 		    					<p class="on-left">
-		    						<span class="text"><span class="title">Further</span>The meeting will be programmed automatically, based on the user's schedule.</span>
+		    						<span class="text"><span class="title">Further</span>Simply reducing the number of steps</span>
 		    					</p>
-		    					<img class="on-right" src="img/further.png" style="right:-50px;top:20px;position:absolute;">
+		    					<img class="on-right" src="img/further.png" style="">
+		    				    </div>
 		    				</div>
 		    				<div class="wireframe-step" style="background-color:rgba(0,0,0,0)"></div>
 		    			</div>
@@ -190,15 +199,22 @@
 			</div>	
 
 			<div class="section part part_8">   
-		        <div class="design_title_left"><span><p>DEFINE A COLOR LANGUAGE TO IMPROVE READABILITY</p></span></div>
-		        <div class="design_img" style="width: 60%;float: right;"><img src="img/Group.png"></div>
+		        <div class="design_title_left"><span><p>DEFINE A COLOR LANGUAGE TO IMPROVE USER EXPERIENCE</p></span></div>
+		        <div class="design_img" style="width: 60%;float: right;"><img src="img/Group.png" style="width:75%;"></div>
 		    </div>
 
 		    <div class="section part part_9"> 
 		        <div class="design_title">VISUAL INTERFACE</div>
-	            <div class="design_img"><img src="img/seeword1.jpg"></div>  
-	            <div class="design_img"><img src="img/seeword7.png"></div>
-	            <div class="design_img"><img src="img/seeword8.png"></div>
+		        <div class="design_ui"><span>I ended up re-designed the entire User Interface, Here’s the final delivery:</span></div>
+		        <div class="design_img_b">
+					<img class="design_img_box" src="img/main_app.png"></div>
+            </div>
+
+            <div class="section part part_10"> 
+		        <div class="design_title">NEXT STEP</div>
+		        <div class="design_ui">
+			        	<span>The refreshed experience We ended up repainted the entire UI, Here’s our final delivery with comparison:</span>
+			    </div>
             </div>
 	      </div>  
 	    </div>
