--- a/portfolio-seewordapp.html
+++ b/portfolio-seewordapp.html
@@ -203,17 +203,19 @@
 		        <div class="design_img" style="width: 60%;float: right;"><img src="img/Group.png" style="width:75%;"></div>
 		    </div>
 
-		    <div class="section part part_9"> 
-		        <div class="design_title">VISUAL INTERFACE</div>
-		        <div class="design_ui"><span>I ended up re-designed the entire User Interface, Here’s the final delivery:</span></div>
+		    <div class="section part part_9">
+		        <div class="row_text" style="margin-top: 97px;">
+		    					<h2>VISUAL REDESIGN</h2>
+		    					<h3 style="color:#777;font-size:1rem; font-weight:300;">I ended up re-designed the entire User Interface, here’s the final delivery:</h3>
+		        </div>
 		        <div class="design_img_b">
 					<img class="design_img_box" src="img/main_app.png"></div>
             </div>
 
             <div class="section part part_10"> 
-		        <div class="design_title">NEXT STEP</div>
-		        <div class="design_ui">
-			        	<span>The refreshed experience We ended up repainted the entire UI, Here’s our final delivery with comparison:</span>
+		        <div class="row_text">
+		        	<h2>VISUAL REDESIGN</h2>
+			        <h3 style="color:#777;font-size:1rem; font-weight:300;"></h3>
 			    </div>
             </div>
 	      </div>  
