--- a/portfolio-seewordapp.html
+++ b/portfolio-seewordapp.html
@@ -209,12 +209,13 @@
 		    					<h3 style="color:#777;font-size:1rem; font-weight:300;">I ended up re-designed the entire User Interface, here’s the final delivery:</h3>
 		        </div>
 		        <div class="design_img_b">
-					<img class="design_img_box" src="img/main_app.png"></div>
+					<img class="design_img_box" src="img/main_app.png">
+				</div>
             </div>
 
             <div class="section part part_10"> 
 		        <div class="row_text">
-		        	<h2>VISUAL REDESIGN</h2>
+		        	<h2>FURTHER</h2>
 			        <h3 style="color:#777;font-size:1rem; font-weight:300;"></h3>
 			    </div>
             </div>
