--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -46,7 +46,7 @@
 
 	    	<div class="section part part_0">
 	    		<div class="slide title_inside"><span style="top:0;">Health Care Information TV App</span></div>
-	    		<div></div>
+	    		<a class="btn_down" href="#page2"><span class="btn_down_el"></span></a>
 	        </div>
 
 	        <div class="section part part_1">
@@ -55,29 +55,28 @@
                 </div>
 
 	    		<div class="section_text" style="width:35%; z-index:2; position:relative;">
-			        <div class="title_inside">Operate <br>More Easy</div>
+			        <div class="title_inside">What we do ?</div>
 			        <div class="design_ui">
-			        	<span>Prove a better expeirences on health care education & service for Patients</span>
+			        	<span>HCI provide healthcare facilities with high performance, integrated hardware/software solutions. By Smart TV and Web App, HCI will continue to deliver the best Interactive Patient experience</span>
 			        </div>
 			    </div>
 	        </div>
 
             <div class="section part part_2">
-            	<div class="title_inside" style="text-align:center;">Observe</div>
+            	<div class="title_inside" style="text-align:center;">In solving the problem</div>
 		        <div class="design_img"><img src="img/hci_2.png"></div>
 	        </div>  
 
 	        <div class="section part part_3">
-	        	<div class="section_img">
-                		<div class="section_bg_img" style="background:url(img/hci_5.png) 0% 50% no-repeat;background-size:90%;"></div>
-                </div>
-
-	    		<div class="section_text">
-			        <div class="title_inside">Challenge</div>
-			        <div class="design_ui">
-			        	<span></span>
+	    		<div class="section_text" style="width: 100%;padding: 70px 150px;margin: 0;">
+			        <div class="row_text">
+			        	<h2>Challenge</h2>
+			        	<h3 style="color:#777;font-size:1rem; font-weight:300;">Collaborated with the See Word Reading Student App to help teachers set up the Course Contents and find the Valuable Data Informations to be Efficiently & Accurately</h3>
 			        </div>
 			    </div>
+			    <div class="design_img_b">
+					       <img class="design_img_box" src="img/hci_5.png" style="width:50%;">
+				</div>
 		    </div>    
 		    <div class="section part part_4">
 		    	<div class="section_text">
@@ -86,7 +85,7 @@
 			        	<span></span>
 			        </div>
 			    </div>
-			    
+
 		        <div class="section_img">
                 		<div class="section_bg_img" style="background:url(img/hci_12.png) 50% 50% no-repeat;background-size:90%;"></div>
                 </div>
