--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -63,8 +63,16 @@
 	        </div>
 
             <div class="section part part_2">
-            	<div class="title_inside" style="text-align:center;">In solving the problem</div>
-		        <div class="design_img"><img src="img/hci_2.png"></div>
+            	<div class="section_img" style="background:#258de8;">
+                		<div class="section_bg_img" style="background:url(img/hci_2.png) 50% 50% no-repeat;background-size:80%;"></div>
+                </div>
+
+	    		<div class="section_text" style="width:35%; z-index:2; position:relative;">
+			        <div class="title_inside">In solving the problem</div>
+			        <div class="design_ui">
+			        	<span>What's the factors would affect user experience ?</span>
+			        </div>
+			    </div>
 	        </div>  
 
 	        <div class="section part part_3">
