--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -8,13 +8,15 @@
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
     <title>Shuai | Healthcare Information</title>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
+    <!--<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>-->
     <link rel="stylesheet" type="text/css" href="css/css3.css">
     <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="js/myjs.js"></script>
     <script type="text/javascript" src="js/jquery.fullPage.min.js"></script>
     <script type="text/javascript" src="js/menu.js"></script>
+    <script type="text/javascript" src="js/jquery-ui.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css">
+    <link rel="stylesheet" type="text/css" href="css/wireframe.css">
     <link rel="stylesheet" type="text/css" href="css/nav.css">
 </head>
 <body>
@@ -55,21 +57,38 @@
                 </div>
 
 	    		<div class="section_text" style="width:35%; z-index:2; position:relative;">
-			        <div class="title_inside">What we do ?</div>
+			        <div class="title_inside">About HCI</div>
 			        <div class="design_ui">
 			        	<span>HCI provide healthcare facilities with high performance, integrated hardware/software solutions. By Smart TV and Web App, HCI will continue to deliver the best Interactive Patient experience</span>
 			        </div>
 			    </div>
 	        </div>
 
-            <div class="section part part_2">
-            	<div class="section_img" style="background:#258de8;">
+	        <div class="section part part_2">
+	    		<div class="slide title_inside">
+	    			<span style="color:#000; top:;">What I do ?</span>
+	    			<div class="splitter_img" sytle="width: 400px;">
+                	<div class="splitter" sytle="width: 420px;">
+					    <img src="img/before.png" id="before" style="width: 100%; position:absolute;left:0;top:0px; clip: rect(0px 200px 300px 0px); z-index: 20;">
+					    <img src="img/after.png" id="after" style="width:100%;position:absolute;left:0;top:0px;clip: rect(0px 400px 300px 0px);z-index: 10;">
+					    <div id="line-demo" style="position: absolute; width: 1px; height: 450px; background-color:rgba(100,100,100,.2); z-index: 30; left:199px; top:-75px;"></div>
+					    <div id="demo-simple-slider" class="dragdealer" sytle="width: 420px;" >
+  							<div id="draggable" class="handle red-bar" style="width: 30px; height: 30px;position: absolute; z-index: 1000;"><span style="background:url(img/hand.png) 50% 50% no-repeat; height:100%; display:block; background-size:10px;"></span></div>
+						</div>
+                	</div>
+                	<div id="display"></div>	
+                </div>
+	    		</div>
+	        </div>
+
+            <div class="section part part_3" style="background: #258de8;">
+            	<div class="section_img" style="background:#fff; width:65%; right:0px;">
                 		<div class="section_bg_img" style="background:url(img/hci_2.png) 50% 50% no-repeat;background-size:80%;"></div>
                 </div>
 
-	    		<div class="section_text" style="width:35%; z-index:2; position:relative;">
-			        <div class="title_inside">In solving the problem</div>
-			        <div class="design_ui">
+	    		<div class="section_text" style="width:35%; z-index:2; position:relative;margin-left:0px;padding-right:20px;">
+			        <div class="title_inside" style="color:#fff;text-align:center;">Observe</div>
+			        <div class="design_ui" style="color:#eee;text-align:center;">
 			        	<span>What's the factors would affect user experience ?</span>
 			        </div>
 			    </div>
