--- a/portfolio.html
+++ b/portfolio.html
@@ -8,10 +8,16 @@
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
     <title>Shuai | Portfolio</title>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
+    <!--<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>-->
     <link rel="stylesheet" type="text/css" href="css/css3.css">
     <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="js/myjs.js"></script>
+    <script type="text/javascript" src="js/jquery.fullPage.min.js"></script>
+    <script type="text/javascript" src="js/menu.js"></script>
+    <script type="text/javascript" src="js/jquery-ui.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css">
+    <link rel="stylesheet" type="text/css" href="css/wireframe.css">
+    <link rel="stylesheet" type="text/css" href="css/nav.css">
 </head>
 <body>
 	<div class="BD">
@@ -21,11 +27,19 @@
 			<div class="top-img">
                 <a href="index.html"><span class="logo_img"></span></a>
             </div>
-				<ul class="menu menu_portfolio">
-					<li class="selected"><a href="portfolio.html">PORTFOLIO</a></li>
-					<li><a href="resume.html">RESUME</a></li>
-					<li><a href="myself.html" >ABOUT ME</a></li>
-				</ul>
+            
+				<div id="navbar" class="menu">
+          <a href="#" class="menubtn">menu</a>
+          <!-- use captain icon for toggle menu -->
+          <div id="hamburgermenu" style="overflow: hidden; width: 0px;">
+            <ul>
+              <li><a href="portfolio.html">PORTFOLIO</a></li>
+              <li><a href="resume.html">RESUME</a></li>
+              <li><a href="myself.html">ABOUT ME</a></li>
+            </ul>
+          </div>
+        </div>
+
 		</div>
 		</div>
 
