--- a/portfolio-seewordapp.html
+++ b/portfolio-seewordapp.html
@@ -54,9 +54,10 @@
 	        </div>
 
 	    	<div class="section part part_1">
-                <div class="section_img">
+	    	  <div class="screen-main">
+                <span class="section_img">
                 		<div class="section_bg_img" style="background:url(img/seeword4.png) no-repeat; background-size:cover;"></div>
-                </div>
+                </span>
 
 	    		<div class="section_text" style="width: 100%;padding: 70px 150px;margin: 0;">
 			        <div class="title_inside"> About the Project</div>
@@ -64,22 +65,23 @@
 			        	<span>Collaborated with the See Word Reading Student App to help teachers set up the Course Contents and find the Valuable Data Informations to be Efficiently & Accurately .</span>
 			        </div>
 			    </div>
+			  </div>  
 	        </div>
 
 	        <div class="section part part_2">
 	        	<div class="splitter_text">
 			        <div class="splitter_title">FROM OK TO PLEASURABLE</div>
-			        <div class="splitter_p" style="color:#666;position: relative;top: 35px;">
-			        	<span><em style="font-style:normal;color:#ccc;">&nbsp;&nbsp;&nbsp;ORIGINAL</em> &nbsp; &nbsp; &nbsp;<em style="font-style:normal;color:#fff;">&nbsp;OUR VISION</em></span>
-			        </div>
 			    </div>
                 <div class="splitter_img" sytle="width: 400px;">
+                	<div class="splitter_p" style="color:#666;position: relative;top: -30px;">
+			        	<span><em style="font-style:normal;color:#ccc;">&nbsp;&nbsp;&nbsp;ORIGINAL</em> &nbsp; &nbsp; &nbsp;<em style="font-style:normal;color:#fff;">&nbsp;OUR VISION</em></span>
+			        </div>
                 	<div class="splitter">
 					    <img src="img/before.png" id="before" style="width: 100%; position:absolute;left:0;top:0px; clip: rect(0px 225px 337px 0px); z-index: 20;">
 					    <img src="img/after.png" id="after" style="width:100%;position:absolute;left:0;top:0px;clip: rect(0px 450px 337px 0px);z-index: 10;">
-					    <div id="line-demo" style="position: absolute; width: 1px; height: 450px; background-color:rgba(100,100,100,.2); z-index: 30; left:224px; top:-65px;"></div>
+					    <div id="line-demo" style="position: absolute; width: 1px; height: 480px; background-color:rgba(100,100,100,.2); z-index: 30; left:224px; top:-65px;"></div>
 					    <div id="demo-simple-slider" class="dragdealer">
-  							<a id="draggable" class="handle red-bar" style="width: 50px; height: 50px;position: absolute; z-index: 1000; cursor:move;"></a>
+  							<a id="draggable" class="handle red-bar" style="width: 50px; height: 50px;position: absolute; z-index: 1000; cursor:move;"><span style="background:url(img/left_right.png) no-repeat 50% 50%; display:block; height:100%; background-size:50%;"></span></a>
 						</div>
                 	</div>
                 	<div id="display"></div>	
