--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -52,14 +52,14 @@
 	        </div>
 
 	        <div class="section part part_1">
-	        	<div class="section_img" style="background:#258de8;">
+	        	<div class="section_img" style="background:#258de8;width:40%;">
                 		<div class="section_bg_img" style="background:url(img/hci_3.3.png) 50% 50% no-repeat;background-size:80%;"></div>
                 </div>
 
-	    		<div class="section_text" style="width:35%; z-index:2; position:relative;">
+	    		<div class="section_text" style="width:45%; z-index:2; position:relative;">
 			        <div class="title_inside">About HCI</div>
 			        <div class="design_ui">
-			        	<span>HCI provide healthcare facilities with high performance, integrated hardware/software solutions. By Smart TV and Web App, HCI will continue to deliver the best Interactive Patient experience</span>
+			        	<span>The Health Care Information range from smart television to Medicare software for remotely administering education, communication, entertainment and enterprise apps that increase patient satisfaction and enhance productivity of staff.</span>
 			        </div>
 			    </div>
 	        </div>
@@ -98,7 +98,7 @@
 	    		<div class="section_text" style="width: 100%;padding: 70px 150px;margin: 0;">
 			        <div class="row_text">
 			        	<h2>Challenge</h2>
-			        	<h3 style="color:#777;font-size:1rem; font-weight:300;">Collaborated with the See Word Reading Student App to help teachers set up the Course Contents and find the Valuable Data Informations to be Efficiently & Accurately</h3>
+			        	<h3 style="color:#777;font-size:1rem; font-weight:300;">Grouped the problems into different categories</h3>
 			        </div>
 			    </div>
 			    <div class="design_img_b">
