--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -65,20 +65,15 @@
 	        </div>
 
 	        <div class="section part part_2">
-	    		<div class="slide title_inside">
-	    			<span style="color:#000; top:;">What I do ?</span>
-	    			<div class="splitter_img" sytle="width: 400px;">
-                	<div class="splitter" sytle="width: 420px;">
-					    <img src="img/before.png" id="before" style="width: 100%; position:absolute;left:0;top:0px; clip: rect(0px 200px 300px 0px); z-index: 20;">
-					    <img src="img/after.png" id="after" style="width:100%;position:absolute;left:0;top:0px;clip: rect(0px 400px 300px 0px);z-index: 10;">
-					    <div id="line-demo" style="position: absolute; width: 1px; height: 450px; background-color:rgba(100,100,100,.2); z-index: 30; left:199px; top:-75px;"></div>
-					    <div id="demo-simple-slider" class="dragdealer" sytle="width: 420px;" >
-  							<div id="draggable" class="handle red-bar" style="width: 30px; height: 30px;position: absolute; z-index: 1000;"><span style="background:url(img/hand.png) 50% 50% no-repeat; height:100%; display:block; background-size:10px;"></span></div>
-						</div>
-                	</div>
-                	<div id="display"></div>	
-                </div>
-	    		</div>
+	        	<div class="section_text" style="width: 100%;padding: 70px 150px;margin: 0;">
+			        <div class="row_text">
+			        	<h2>What I do ?</h2>
+			        	<h3 style="color:#777;font-size:1rem; font-weight:300;">Grouped the problems into different categories</h3>
+			        </div>
+			    </div>
+			    <div class="design_img_b">
+					       <img class="design_img_box" src="img/hci_5.png" style="width:60%;">
+				</div>
 	        </div>
 
             <div class="section part part_3" style="background: #258de8;">
@@ -102,7 +97,7 @@
 			        </div>
 			    </div>
 			    <div class="design_img_b">
-					       <img class="design_img_box" src="img/hci_5.png" style="width:50%;">
+					       <img class="design_img_box" src="img/hci_5.png" style="width:60%;">
 				</div>
 		    </div>    
 		    <div class="section part part_4">
