--- a/portfolio-seewordapp.html
+++ b/portfolio-seewordapp.html
@@ -70,11 +70,11 @@
 
 	        <div class="section part part_2">
 	        	<div class="splitter_text">
-			        <div class="splitter_title">FROM OK TO PLEASURABLE</div>
+			        <div class="splitter_title">Comparison</div>
 			    </div>
                 <div class="splitter_img" sytle="width: 400px;">
                 	<div class="splitter_p" style="color:#666;position: relative;top: -30px;">
-			        	<span><em style="font-style:normal;color:#ccc;">&nbsp;&nbsp;&nbsp;ORIGINAL</em> &nbsp; &nbsp; &nbsp;<em style="font-style:normal;color:#fff;">&nbsp;OUR VISION</em></span>
+			        	<span><em style="font-style:normal;color:#ccc;">&nbsp;&nbsp;BEFORE</em> &nbsp; &nbsp; &nbsp;<em style="font-style:normal;color:#fff;">&nbsp;AFTER</em></span>
 			        </div>
                 	<div class="splitter">
 					    <img src="img/before.png" id="before" style="width: 100%; position:absolute;left:0;top:0px; clip: rect(0px 225px 337px 0px); z-index: 20;">
@@ -221,6 +221,7 @@
             <div class="section part part_10"> 
 		        <div class="row_text">
 		        	<h2>FURTHER</h2>
+		        	<iframe src="https://marvelapp.com/1f48a4g?emb=1" width="948" height="676" allowTransparency="true" frameborder="0"></iframe>
 			        <h3 style="color:#777;font-size:1rem; font-weight:300;"></h3>
 			    </div>
             </div>
