--- a/portfolio-seewordapp.html
+++ b/portfolio-seewordapp.html
@@ -56,7 +56,7 @@
 	    	<div class="section part part_1">
 	    	  <div class="screen-main">
                 <span class="section_img">
-                		<div class="section_bg_img" style="background:url(img/seeword4.png) no-repeat; background-size:cover;"></div>
+                		<img class="section_bg_img" src="img/seeword4.png">
                 </span>
 
 	    		<div class="section_text" style="width: 100%;padding: 70px 150px;margin: 0;">
@@ -74,7 +74,7 @@
 			    </div>
                 <div class="splitter_img" sytle="width: 400px;">
                 	<div class="splitter_p" style="color:#666;position: relative;top: -30px;">
-			        	<span><em style="font-style:normal;color:#ccc;">&nbsp;&nbsp;BEFORE</em> &nbsp; &nbsp; &nbsp;<em style="font-style:normal;color:#fff;">&nbsp;AFTER</em></span>
+			        	<span><em style="font-style:normal;color:#ccc;">BEFORE&nbsp;&nbsp;</em><em style="font-style:normal;color:#fff;">&nbsp;&nbsp;AFTER</em></span>
 			        </div>
                 	<div class="splitter">
 					    <img src="img/before.png" id="before" style="width: 100%; position:absolute;left:0;top:0px; clip: rect(0px 225px 337px 0px); z-index: 20;">
